# block-blast-bot

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  DISPLAY_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MACOS_OPENMP.md  MULTITHREADING.md  MULTITHREADING_SUMMARY.md  MULTITHREAD_COMPLETE.md  PIECE_SELECTION.md  PIECE_SELECTION_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  VISUAL_IMPROVEMENTS.md  VISUAL_SHOWCASE.md  main  main.cpp  test_piece_selection.sh
include/: colors.h  common.h
src/: BotController.cpp  BotController.h  example.cpp  main.cpp  piece_selection_demo.cpp  visual_demo.cpp
src/ai/: Solver.cpp  Solver.h
src/core/: Board.cpp  Board.h  GameState.cpp  GameState.h  Piece.cpp  Piece.h
src/game/: Evaluator.cpp  Evaluator.h
tests/: test_board.cpp
